<resources>
    <string name="app_name" translatable="false">GetALift</string>
    <string name="txt_login_username">Username</string>
    <string name="txt_login_password">Password</string>
    <string name="btn_login_connect">Connection</string>
    <string name="msc_key_saved_token" translatable="false">token</string>
    <string name="txt_welcome">Welcome</string>
    <string name="btn_login_createaccount">Create Account</string>
    <string name="txt_title_signin">Get A Lift - Sign In</string>
    <string name="txt_title_login">Get A Lift - Login</string>
    <string name="txt_signin_username">Username</string>
    <string name="txt_signin_password">Password</string>
    <string name="txt_signin_email">Email</string>
    <string name="txt_signin_firstname">First Name</string>
    <string name="txt_signin_lastname">Last Name</string>
    <string name="title_activity_home_map">Get A Lift - Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="txt_account">Your Account</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_lifts">Your Lifts</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_help">Help</string>
    <string name="txt_about">About</string>
    <string name="txt_contact_us">Contact Us</string>
    <string name="txt_faq">F.A.Q</string>
    <string name="txt_your_position">Your position</string>
    <string name="txt_title_homemap">Get A Lift - Home</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="edt_homedestination">Enter a destination...</string>
    <string name="btn_search">Search</string>
    <string name="edt_startpoint">Enter the starting point...</string>
    <string name="edt_date">Pic a date...</string>
    <string name="edt_time">Pic a time...</string>
    <string name="edt_pic_date">Pic</string>
    <string name="edt_pic_time">Pic</string>
    <string name="msc_shared_pref_filename" translatable="false">mt.edu.um.getalift.sf</string>
    <string name="msc_saved_user" translatable="false">user</string>
    <string name="edt_signin_phonenumber">Phone Number</string>
    <string name="error_username_short">The username must be more than 6 character long.</string>
    <string name="error_password_missing">To edit your password, you have to enter a new one !</string>
    <string name="error_password_short">The password must be more than 6 character long.</string>
    <string name="error_password_long">The password must be less than 63 character long.</string>
    <string name="error_actual_password_missing">To edit your password, you have to enter your actual password !</string>
    <string name="error_actual_password_incorrect">Your actual password is incorrect !</string>
    <string name="error_actual_password_correct">Your actual password is correct !</string>
    <string name="error_username_long">The username must be less than 63 character long.</string>
    <string name="error_email_valid">You must enter a valid email adress.</string>
    <string name="error_firstname_notset">You must tell your firstname.</string>
    <string name="error_lastname_notset">You must tell your last name.</string>
    <string name="error_phone_valid">You must enter a valid phone number.</string>
    <string name="success_account_created">Your account is created. You can log in now.</string>
    <string name="success_profile_edit">Your profile has been edit. You can look your new information on the profile page.</string>
    <string name="error_username_exists">This username already exists. Please chose another one.</string>
    <string name="txt_title_profile">Get A Lift - Profile</string>
    <string name="txt_title_drive">Get A Lift - Drive</string>
    <string name="txt_title_result_search">Available drives</string>
    <string name="txt_create_route">Or you can create your route</string>
    <string name="btn_create_route">I want to drive</string>
    <string name="btn_create_ride">Create</string>
    <string name="btn_edit_ride">Edit</string>
    <string name="txt_title_help">Get A Lift - Help</string>
    <string name="txt_title_faq">Get A Lift - F.A.Q</string>
    <string name="txt_title_about">Get A Lift - About</string>
    <string name="text_title_contact_us">Get A Lift - Contact Us</string>
    <string name="text_title_settings">Get A Lift - Settings</string>
    <string name="error_name_long">The name must be less than 63 character long.</string>
    <string name="error_name_short">The name must be more than 5 character long.</string>
    <string name="error_surname_long">The surname must be less than 63 character long.</string>
    <string name="error_surname_short">The surname must be more than 5 character long.</string>
    <string name="error_message_long">The message must be less than 500 character long.</string>
    <string name="error_message_short">The message must be more than 20 character long.</string>
    <string name="error_message_20_long">The message must be less than 100 character long.</string>
    <string name="error_message_20_short">The message must be more than 20 character long.</string>
    <string name="error_comment_long">The message must be less than 500 character long.</string>
    <string name="error_comment_short">The message must be more than 20 character long.</string>
    <string name="error_subject_short">The message must be more than 10 character long.</string>
    <string name="error_subject_long">The message must be less than 100 character long.</string>
    <string name="btn_autofill">Autofill</string>
    <string name="btn_clear">Clear all</string>
    <string name="btn_send_message">Send message</string>
    <string name="txt_message">Your message</string>
    <string name="txt_subject">Subject</string>
    <string name="txt_message_of">Message of </string>
    <string name="txt_about1"> What is Get A Lift ?</string>
    <string name="txt_about2">" → As you can see, it’s an mobile application for Android. But what else ? This application was designed to connect people who want to make daily commutes. It mainly favors short and regular trips.   The application must allow users to find the best route offered by other users. Indeed, if the user leaves Sliema to go to Valletta for example every day and another user makes the same trip or part of this journey, they can be put in contact and make the trip together. It will only take one car instead of two, reducing the number of cars on the island.   "</string>
    <string name="txt_about3">" → He can create his own account from which he can create one or more trips, save them and search for a trip.  The trip created can be his daily commute or the one he wants to do with another user. Once saved, the app can compare it to other users for similarities. This will determine if one or more users are making more or less similar journeys."</string>
    <string name="txt_about4">" → In addition, the application must above all favor the driver unless he decides to be accommodating.          To do this, it will be proposed to the person wishing to travel with him a route (on foot) to reach the meeting point.          This meeting point will be determined by the application depending on the initial route and the location of the passenger.  "</string>
    <string name="txt_about5"> What is the purpose of the Get A Lift App’ ? </string>
    <string name="txt_about6">" → The purpose of the app is to connect only drivers and passengers, will not take care of the payment management if there is any, or the management of the places in the vehicles.          It will identify the journeys of the drivers and propose the one which is the best users seeking a route.          The application must be simple to use and intuitive. "</string>
    <string name="txt_faq1"> How to create an account ? </string>
    <string name="txt_faq2">" → Just go to the login page and click on the create an account button.  Then fill in the fields with your personal data."</string>
    <string name="txt_faq3"> How to create a trip ?</string>
    <string name="txt_faq4"> → Click on Enter destination \n → Fill in the fields related to your trip \n → Click on Go \n And here is your trip and create and you can view all your saved trips in My drives </string>
    <string name="txt_faq5">And if I want to drive ?</string>
    <string name="txt_faq6">" → After recording my trip, by clicking on I want to drive, I can propose to be a driver   Then, a page to create your route will be displayed."</string>
    <string name="txt_faq7"> How to access my profile ?</string>
    <string name="txt_faq8">" → On the home page, click on the menu at the top left of the screen.  \n → Click on My profile "</string>
    <string name="txt_faq9"> How to contact someone who is on the same trip as me ? </string>
    <string name="txt_faq10">"→ Once the trip is saved, a page with the available routes appears \n  → Click on the person with whom you wish to travel \n  → A page showing the route of it appears   \n → Click on Contact "</string>
    <string name="txt_faq11"> How to save the journey of a person making the same trip as me ?</string>
    <string name="txt_faq12">" Once the trip is saved, a page with the available routes appears  \n → Click on the person with whom you wish to travel \n → A page showing the route of it appears   \n→ Click on Save"</string>
    <string name="title_activity_settings">Settings</string>
    <string name="txt_general"> General </string>
    <string name="txt_Profil"> Profile </string>
    <string name="txt_choice_language"> You chose </string>
    <string name="txt_edit_profile"> Edit my profile </string>
    <string name="txt_edit_pwd">Edit my password</string>
    <string name="txt_to_edit_pwd">If you want to edit your password, enter your actual one.</string>
    <string name="txt_actual_password">Actual Password</string>
    <string name="error_same_password">Your actual password and your new one are the same</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_new_pwd_edited">Your new password has been updated ! </string>
    <string name="pref_title_change_language">Change language</string>
    <string-array name="pref_list_languages">
        <item> <string name="txt_english"> English</string></item>
        <item> <string name="txt_french"> French</string> </item>
        <item> <string name="txt_spanish"> Spanish</string></item>
    </string-array>
    <string-array name="pref_entry_values_languages">
        <item>en</item>
        <item>fr</item>
        <item>es</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="txt_btn_valid"> Validate </string>
    <string name="text_title_edit_profile">Get A Lift - Edit Profile</string>
    <string name="txt_comment">Your comment </string>
    <string name="txt_change_btn">Change language</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_todo_edit_profile">If you don\'t want to change something, keep the case empty </string>
    <string name="txt_edit_create_route">Now, you can create your route by dragging the markers on the map</string>
    <string name="txt_from">From : </string>
    <string name="txt_to">To : </string>
    <string name="txt_driver_info">Driver\'s Info</string>
    <string name="txt_new_notification">New notification </string>
    <string name="txt_new_passenger"> New passenger ! </string>
</resources>