<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout="@layout/activity_settings"
    android:orderingFromXml="true"
    tools:targetAPI="11">
<PreferenceCategory
    android:key="GeneralCategory"
    android:title ="@string/txt_general">

    <ListPreference
        android:key="change language"
        android:title="@string/pref_title_change_language"
        android:defaultValue="English"
        android:entries="@array/pref_list_languages"
        android:entryValues="@array/pref_entry_values_languages"
         />
</PreferenceCategory>
    <PreferenceCategory
        android:key="Profile Category"
        android:title ="@string/txt_profile">
        <Preference
            android:title="@string/txt_edit_profile"
            android:key="pref_edit_key">
        </Preference>
</PreferenceCategory>

<PreferenceCategory
android:key="NotificationCategory"
android:title ="@string/txt_notifications">

    <PreferenceScreen
        android:key="button_voicemail_category_key"
        android:title="VoiceMail"
        android:persistent="false">
        <ListPreference
            android:key="button_voicemail_provider_key"
            android:title="Voice Mail provider"  />
        <!-- opens another nested subscreen -->
        <PreferenceScreen
            android:key="button_voicemail_setting_key"
            android:title="VoiceMail Settings"
            android:persistent="false">

        </PreferenceScreen>
        <RingtonePreference
            android:key="button_ringtone_key"
            android:title="Sounds"
            android:ringtoneType="notification"  />

    </PreferenceScreen>
</PreferenceCategory>



</PreferenceScreen>